Fix gallery overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,7 @@ div.gallery{
 
 div.gallery_image_holder{
   display:inline-block;
+	overflow:hidden;
   padding:.375em;
 }
 
